--- a/MFCApplication/MFCApplication.vcxproj.filters
+++ b/MFCApplication/MFCApplication.vcxproj.filters
@@ -164,6 +164,7 @@
       <Filter>资源文件</Filter>
     </None>
     <None Include="MFCApplication.reg" />
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\MFCApplicationDoc.ico">
